# edu-rag

./: .dockerignore  .gitignore  Dockerfile.simple  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
api/v1/: __init__.py  chat_routes.py  upload_routes.py
data/: protein.txt
models/: schemas.py
services/: __init__.py  chatmodel.py  embedding.py  local_embedding_model.py  pdf_utils.py  text_utils.py  utilits.py  vectordatabase.py
