[project]
name = "edu-chat-rag"
version = "0.1.0"
description = "A simple RAG application for educational purposes"
authors = ["Zubair Farahi"]
requires-python = ">=3.10,<3.12"

dependencies = [
    "torch==2.2.0",  # CPU
    "numpy<2",
    "fastapi>=0.115.12",
    "jupyter>=1.1.1",
    "openai",
    "dotenv",
    "pydantic>=2.11.4",
    "uvicorn>=0.34.2",
    "pdf2image>=1.17",
    "pypdf2>=3.0.1",
    "pymupdf>=1.26.3",
    "transformers==4.43.1",
    "sentence-transformers==2.7.0",
]
